# AV-Asset-Manager

./: .gitignore  .gitmodules  .travis.yml  AV Asset Manager.e4p  LICENSE.txt  Pipfile  README.md  requirements-tests.txt  requirements.txt  setup.cfg  tests.py
.github/workflows/: django.yml
avam/: manage.py
avam/asset_types/: admin.py  apps.py  models.py
avam/asset_types/migrations/: 0001_initial.py  0002_auto_20151221_1302.py
avam/assets/: admin.py  apps.py  fields.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
avam/assets/migrations/: 0001_initial.py  0002_auto_20151223_1145.py  0003_auto_20160130_1416.py  0004_auto_20160130_1419.py  0005_auto_20160130_1426.py  0006_auto_20160130_1439.py  0007_auto_20160130_1443.py  0008_auto_20160131_1329.py  0009_auto_20160131_1331.py  0010_asset_serial_number.py  0011_videocamera.py  0013_auto_20160212_0948.py  (+2 more)
avam/assettags/: admin.py  apps.py  forms.py  inkscape_export.py  models.py  qrcode.py  rlpdfgen.py  settings.py  tag_handler.py  tests.py  units.py  urls.py  views.py
avam/assettypes/: __init__.py  admin.py  apps.py  models.py  tests.py
avam/avam/: .gitignore  settings.py  urls.py  wsgi.py
avam/categories/: admin.py  apps.py  models.py  queryutils.py  signals.py  tests.py  urls.py  views.py
avam/locations/: admin.py  models.py  tests.py
avam/object_history/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
avam/site_navigation/: apps.py  navitems.py  urls.py  widgets.py
avam/templates/: base-shell.html  base.html  home.html
(+340 files in other folders)
