[metadata]
name = django-av-asset-manager
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
description = Inventory Management
long_description = file: README.md
long_description_content_type = text/x-markdown
license = GPLv3
license_files =
  LICENSE.txt


[options]
include_package_data = True
packages = find:
install_requires =
    django==4.2
    qrcode
    django-sekizai
    wand
    beautifulsoup4
    html5lib
    pypdf2

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    managepy = avam.manage:main
